# mlx-gen

./: .gitignore  CLAUDE.md  CODEGRAPH.md  CODE_REVIEW_2026-07-01.md  Cargo.toml  FLUX_DIVERGENCE_REPORT_2026-06-02.md  LICENSE  NOTICE  README.md
mlx-gen-bernini/: Cargo.toml
mlx-gen-bernini/src/: assembly.rs  bernini.rs  clip_diff.rs  config.rs  connector.rs  convert.rs  forward.rs  guidance.rs  lib.rs  mar.rs  pipeline.rs  preprocess.rs  process.rs  qwen2_5_vl.rs  rope.rs  template.rs  vae_features.rs  vision.rs  vit_preprocess.rs
mlx-gen-bernini/tests/: assembly_parity.rs  clip_diff_parity.rs  clip_diff_realweight.rs  convert_planner_real.rs  handoff_parity.rs  process_parity.rs  qwen_backbone_parity.rs  qwen_backbone_realweight.rs  render_real.rs  template_parity.rs  vision_tower_parity.rs  vision_tower_realweight.rs  vit_preprocess_parity.rs
mlx-gen-boogu/: Cargo.toml
mlx-gen-boogu/src/: convert.rs  lib.rs  loader.rs  model.rs  pipeline.rs  quant.rs  tokenizer.rs
mlx-gen-boogu/tests/: generator.rs  mllm_image_parity.rs  pid_decode_real_weights.rs  pipeline_e2e.rs  quant_profile.rs  te_parity.rs  turbo_curated_smoke.rs  turnkey.rs  unified_sampler_smoke.rs  vision_parity.rs
mlx-gen-chroma/: Cargo.toml
mlx-gen-chroma/assets/: t5_tokenizer.json
mlx-gen-chroma/src/: adapters.rs  beta.rs  config.rs  convert.rs  lib.rs  loader.rs  model.rs  quant.rs  text.rs  transformer.rs
mlx-gen-chroma/tests/: adapter_routing.rs  approximator_parity.rs  e2e_real_weights.rs  pid_decode_real_weights.rs  prequantize_real_weights.rs  registry.rs  text_mask_parity.rs  transformer_parity.rs
mlx-gen-depth/: Cargo.toml
mlx-gen-depth/src/: backbone.rs  config.rs  head.rs  lib.rs  neck.rs  preprocess.rs  util.rs
mlx-gen-depth/tests/: depth_shapes.rs
mlx-gen-face/: Cargo.toml
mlx-gen-face/src/: align.rs  bisenet.rs  common.rs  face.rs  iresnet.rs  lib.rs  scrfd.rs
mlx-gen-face/tests/: align_parity.rs  face_analysis_parity.rs  scrfd_parity.rs
mlx-gen-flux/: Cargo.toml
mlx-gen-flux/src/: config.rs  control_transformer.rs  convert.rs  image_encoder.rs  ip_adapter.rs  lib.rs  loader.rs  model.rs  model_control.rs  pipeline.rs  quant.rs  text_encoder.rs  transformer.rs
mlx-gen-flux/tests/: adapter_real_weights.rs  bf16_text_probe.rs  control_real_weights.rs  e2e_real_weights.rs  hyper_flux_real_weights.rs  ip_adapter_real_weights.rs  pid_decode_real_weights.rs  prequantize_real_weights.rs  registry.rs  text_real_weights.rs  tokenizer_parity.rs
mlx-gen-flux2/: Cargo.toml
mlx-gen-flux2/src/: adapters.rs  caption_upsample.rs  config.rs  convert.rs  kv_cache.rs  lib.rs  loader.rs  model.rs  model_control.rs  pipeline.rs  pos_embed.rs  transformer.rs  vae.rs
mlx-gen-flux2/tests/: adapter_real_weights.rs  caption_upsample_golden.rs  caption_upsample_real_weights.rs  dev_adapter_real_weights.rs  dev_e2e_real_weights.rs  e2e_real_weights.rs  edit_real_weights.rs  fun_control_parity.rs  img2img_real_weights.rs  img_guidance_spike.rs  kv_cache_parity.rs  pid_decode_real_weights.rs  quant_real_weights.rs  registry.rs  s0_parity.rs  te_dev_parity.rs  te_dev_real_weights.rs  te_parity.rs  te_real_weights.rs  thirdparty_lycoris_real_weights.rs  transformer_chunk_equiv.rs  transformer_dev_real_weights.rs  transformer_parity.rs  transformer_real_weights.rs  unified_sampler_smoke.rs  vae_real_weights.rs  vision_parity.rs
mlx-gen-ideogram/: Cargo.toml
mlx-gen-ideogram/src/: config.rs  lib.rs  loader.rs  model.rs  pipeline.rs
mlx-gen-ideogram/tests/: dit_parity.rs  edit_smoke.rs  generator.rs  pid_decode_real_weights.rs  smoke.rs  te_parity.rs  tokenizer_parity.rs  vae_parity.rs
mlx-gen-instantid/: Cargo.toml
mlx-gen-instantid/src/: kps.rs  lib.rs  model.rs
mlx-gen-instantid/tests/: instantid_curated_smoke.rs  instantid_e2e.rs  instantid_kps.rs
mlx-gen-joycaption/: Cargo.toml
mlx-gen-joycaption/src/: model.rs
mlx-gen-joycaption/tests/: conformance.rs  generate_real_weights.rs
mlx-gen-kolors/: Cargo.toml
mlx-gen-kolors/src/: chatglm3.rs  lib.rs  model.rs  registry.rs  sampler.rs  training.rs  unet.rs
mlx-gen-kolors/tests/: chatglm_parity.rs  conditioned_curated_smoke.rs  controlnet_ip_parity.rs  controlnet_parity.rs  ip_adapter_parity.rs  pid_decode_real_weights.rs  registry_parity.rs  t2i_parity.rs  trainer_e2e.rs  unet_parity.rs
mlx-gen-krea/: Cargo.toml
mlx-gen-krea/src/: config.rs  convert.rs  lib.rs  loader.rs  model.rs  pipeline.rs  quant.rs  schedule.rs  training.rs  vae.rs
mlx-gen-krea/tests/: conformance.rs  dit_parity.rs  dit_real_weights.rs  e2e_real_weights.rs  pid_decode_real_weights.rs  te_parity.rs  te_real_weights.rs  trainer_real_weights.rs  vae_real_weights.rs
mlx-gen-lens/: Cargo.toml
mlx-gen-lens/src/: adapters.rs  config.rs  convert.rs  lib.rs  pipeline.rs  quant.rs  registry.rs  schedule.rs  text.rs  training.rs  vae.rs
mlx-gen-lens/tests/: adapter_parity.rs  dit_parity.rs  e2e_parity.rs  gptoss_attn_parity.rs  gptoss_layer_parity.rs  pid_decode_real_weights.rs  prequantize_real_weights.rs  schedule_parity.rs  tokenizer_parity.rs  trainer_e2e.rs  vae_parity.rs
mlx-gen-ltx/: Cargo.toml
mlx-gen-ltx/src/: adapters.rs  audio_vae.rs  config.rs  connector.rs  convert.rs  enhance.rs  gemma.rs  lib.rs  model.rs  pipeline.rs  positions.rs  rope.rs  text_encoder.rs  training.rs  transformer.rs  upsampler.rs  vae.rs  vocoder.rs
mlx-gen-ltx/tests/: audio_vae_parity.rs  av_dit_parity.rs  av_e2e_parity.rs  av_lora_e2e_parity.rs  bf16_sdpa_bug.rs  block_parity.rs  connector_parity.rs  convert_parity.rs  dit_parity.rs  e2e_parity.rs  gemma_parity.rs  i2v_parity.rs  lora_real_weights.rs  pipeline_parity.rs  registration.rs  s0_parity.rs  te_parity.rs  trainer_e2e.rs  (+4 more)
mlx-gen-pid/: Cargo.toml
mlx-gen-pulid/: Cargo.toml
mlx-gen-qwen-image/: Cargo.toml
mlx-gen-sam2/: Cargo.toml
mlx-gen-sam3/: Cargo.toml
mlx-gen-sana/: Cargo.toml
mlx-gen-scail2/: Cargo.toml
mlx-gen-sd3/: Cargo.toml
mlx-gen-sdxl/: Cargo.toml
mlx-gen-sensenova/: Cargo.toml
mlx-gen-svd/: Cargo.toml
mlx-gen-wan/: Cargo.toml
mlx-gen-z-image/: Cargo.toml
(+704 files in other folders)
