[package]
name = "mlx-gen-bernini"
version = "0.0.0"
edition = "2021"
description = "ByteDance Bernini renderer (Wan2.2-T2V-A14B + source-id rotary, token-packed conditioning, APG guidance) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "video", "bernini", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# The Bernini renderer IS Wan2.2-T2V-A14B: the DiT, z16 VAE, UMT5, RoPE table, flow/UniPC scheduler,
# patchify, and the converter all come from mlx-gen-wan (sc-4705 emits a wan2_2_t2v_14b snapshot).
mlx-gen-wan = { path = "../mlx-gen-wan" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# bernini_renderer.json knob sidecar reading.
serde_json = "1"
# Source-media decode (i2i/v2v/r2v/rv2v conditioning). PNG + JPEG cover the still inputs.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
