[package]
name = "mlx-gen-boogu"
version = "0.0.0"
edition = "2021"
description = "Boogu-Image-0.1 (Lumina-Image-2.0 / OmniGen2 lineage) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "boogu-image", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Parse the diffusers `transformer/config.json` (architecture + pre-quant manifest).
serde_json = "1"
# Boogu's VAE is the FLUX.1 16-ch `AutoencoderKL`, byte-identical to the VAE `mlx-gen-flux` reuses
# from here — so we reuse the same `Vae`/`VaeDecoderConfig::default_z_image` rather than re-port it.
mlx-gen-z-image = { path = "../mlx-gen-z-image" }

[dev-dependencies]
# Backend-neutral contract conformance suite — Boogu runs through it on the macos-mlx lane.
sceneworks-gen-core-testkit = { workspace = true }
# Save the e2e smoke render as a PNG for visual inspection (same dep the SDXL e2e tests use).
image = { version = "0.25", default-features = false, features = ["png"] }
