[package]
name = "mlx-gen-chroma"
version = "0.0.0"
edition = "2021"
description = "Chroma (chroma1_hd/base/flash) provider crate for mlx-gen — a FLUX.1-schnell-derived DiT with a distilled-guidance Approximator (modulation), T5-only conditioning, and MMDiT attention masking."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "chroma", "flux", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Reuse the T5-XXL encoder type, the AutoencoderKL VAE loader, and the pack/unpack/sigmas helpers.
mlx-gen-flux = { path = "../mlx-gen-flux" }
# The shared VAE type returned by the flux VAE loader.
mlx-gen-z-image = { path = "../mlx-gen-z-image" }
# Optional PiD super-resolving decoder (epic 7840, sc-7846): Chroma reuses the FLUX.1 16-ch VAE
# (`mlx_gen_flux::load_vae`), so the decode can route through `mlx_gen_pid::PidDecoder` (the `flux`
# student) when `req.use_pid` is set. `mlx-gen-pid` depends only on core, so it's acyclic.
mlx-gen-pid = { path = "../mlx-gen-pid" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# Offline pre-quantization converter (sc-8777): annotate the packed transformer `config.json` with a
# `quantization` block (HF/diffusers-compat; the Rust loader auto-detects via `.scales` and ignores it).
serde_json = "1"

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity test.
image = { version = "0.25", default-features = false, features = ["png"] }
