[package]
name = "mlx-gen-depth"
version = "0.0.0"
edition = "2021"
description = "Depth Anything V2 (DINOv2 ViT + DPT head) monocular depth estimator for mlx-gen — native MLX, a host-side ControlNet depth preprocessor (no Python/torch)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "depth-anything", "depth", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
