[package]
name = "mlx-gen-flux"
version = "0.0.0"
edition = "2021"
description = "FLUX.1 provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "flux", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
mlx-gen-z-image = { path = "../mlx-gen-z-image" }
# Reuse the CLIP ViT vision tower + CLIP image preprocessing for the XLabs IP-Adapter image
# encoder (sc-3622). Same reuse pattern as mlx-gen-svd → mlx-gen-sdxl; no dependency cycle
# (sdxl does not depend on flux).
mlx-gen-sdxl = { path = "../mlx-gen-sdxl" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity test.
image = { version = "0.25", default-features = false, features = ["png"] }
