[package]
name = "mlx-gen-flux2"
version = "0.0.0"
edition = "2021"
description = "FLUX.2-klein provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "flux", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# Read safetensors JSON headers (keys + shapes only) for the single-file→diffusers converter's
# base-validation guard (sc-3136). Already in the workspace lock tree (via `tokenizers`).
serde_json = "1"

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity test (later slices).
image = { version = "0.25", default-features = false, features = ["png"] }
