[package]
name = "mlx-gen-flux2"
version = "0.0.0"
edition = "2021"
description = "FLUX.2-klein provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "flux", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Optional PiD super-resolving decoder overlay (epic 7840, sc-7847). Depends only on mlx-gen core
# (acyclic). Lens/Ideogram reuse this crate's `Flux2Vae` + the same `flux2` PiD latent space.
mlx-gen-pid = { path = "../mlx-gen-pid" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# The shared on-device decode primitives (KV cache + sampler). The caption-upsampling decode loop
# (sc-6030) consumes mlx-llm's `ContiguousKvCache` + `sample` instead of a hand-rolled copy (sc-7160).
# Pin must equal every other mlx-llm pin in the worker graph (mlx-gen-joycaption + the worker) so
# cargo unifies ONE mlx-llm — one `Array`, one `core-llm`. See mlx-gen-joycaption/Cargo.toml.
mlx-llm = { git = "https://github.com/SceneWorks/mlx-llm", rev = "6c052ba6bbb81be0b95bd5e4ba650d25edb62896" }
# Read safetensors JSON headers (keys + shapes only) for the single-file→diffusers converter's
# base-validation guard (sc-3136). Already in the workspace lock tree (via `tokenizers`).
serde_json = "1"

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity test (later slices).
image = { version = "0.25", default-features = false, features = ["png"] }
