[package]
name = "mlx-gen-ideogram"
version = "0.0.0"
edition = "2021"
description = "Ideogram 4.0 provider crate for mlx-gen (sc-5984 / epic 4725)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "ideogram", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Reuse the AutoencoderKLFlux2 VAE: Ideogram 4's VAE is the same architecture as FLUX.2's
# (model_index `AutoencoderKLFlux2`), so `Flux2Vae` loads Ideogram's converted weights directly.
mlx-gen-flux2 = { path = "../mlx-gen-flux2" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry.
inventory = { workspace = true }
# Read safetensors JSON headers (keys + shapes) for converter/loader validation guards.
serde_json = "1"

[dev-dependencies]
# PNG dump of the Rust render for visual inspection in the e2e parity tests (later slices).
image = { version = "0.25", default-features = false, features = ["png"] }
