[package]
name = "mlx-gen-instantid"
version = "0.0.0"
edition = "2021"
description = "InstantID identity-preserving SDXL provider for mlx-gen (face Resampler + IdentityNet ControlNet + kps control-image renderer)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "instantid", "sdxl", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
mlx-gen-sdxl = { path = "../mlx-gen-sdxl" }
mlx-gen-face = { path = "../mlx-gen-face" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }

[dev-dependencies]
# PNG inspection output for the e2e test (matches the workspace `image` version).
image = { version = "0.25", default-features = false, features = ["png"] }
