[package]
name = "mlx-gen-joycaption"
version = "0.0.0"
edition = "2021"
description = "JoyCaption image captioning provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "joycaption", "captioning", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type).
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's captioner registry.
inventory = { workspace = true }
