[package]
name = "mlx-gen-joycaption"
version = "0.0.0"
edition = "2021"
description = "JoyCaption image captioning provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "joycaption", "captioning", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# The unified LLM engine: serves the JoyCaption VLM as the `mlx-joycaption` core-llm provider that
# this shim now consumes through the contract (sc-7265). Pinned to the SAME rev the SceneWorks worker
# pins so cargo unifies ONE mlx-llm — one `Array`, one `core-llm` — across the worker dependency
# graph (the worker also depends on mlx-llm directly for prompt-refine). Both mlx-gen and mlx-llm
# build the identical pmetal `mlx-rs`, so there is a single MLX build and one `Array` type.
mlx-llm = { git = "https://github.com/SceneWorks/mlx-llm", rev = "29e382bd6a3800accf0bac5daf5d8eb61e1a2adf" }
# Link-time self-registration into mlx-gen's captioner registry.
inventory = { workspace = true }

[dev-dependencies]
# Backend-neutral contract conformance suite (sc-4895): the macos-mlx lane runs joy_caption through
# it as the "one real captioner" the testkit AC requires. Weight-gated (#[ignore]).
sceneworks-gen-core-testkit = { workspace = true }
