[package]
name = "mlx-gen-kolors"
version = "0.0.0"
edition = "2021"
description = "Kolors (SDXL-family U-Net + ChatGLM3-6B text encoder) provider for mlx-gen — bilingual Chinese/English T2I."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "kolors", "chatglm", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Kolors reuses the SDXL U-Net + VAE + sampler. The U-Net gains an auto-detected `encoder_hid_proj`
# for the ChatGLM3 4096→2048 context projection (see `UNetConfig::kolors`).
mlx-gen-sdxl = { path = "../mlx-gen-sdxl" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time model registration (the `mlx_gen` registry; mirrors mlx-gen-sdxl). sc-3874.
inventory = { workspace = true }
# Decode training-dataset images for the LoRA/LoKr trainer (sc-4568); mirrors mlx-gen-sdxl.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
