[package]
name = "mlx-gen-krea"
version = "0.0.0"
edition = "2021"
description = "Krea 2 (Turbo T2I inference / Raw LoRA-training base) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "krea-2", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Krea 2's VAE is the **Qwen-Image** `AutoencoderKLQwenImage` (the published `vae/config.json` declares
# `_name_or_path = "Qwen/Qwen-Image"`); reuse `QwenVae` + its diffusers→internal key remap wholesale
# rather than re-port the causal-Conv3d VAE (the boogu→z-image / kolors→sdxl provider-reuse precedent).
mlx-gen-qwen-image = { path = "../mlx-gen-qwen-image" }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration of the `krea_2_turbo` generator into the `mlx_gen` registry
# (`model.rs::inventory::submit!`); discovered by `gen_core::registry::load(id, …)` when the worker
# force-links this crate.
inventory = { workspace = true }
# Parse the diffusers `transformer/config.json` + `model_index.json` (architecture + quant manifest).
serde_json = "1"
# Decode training-dataset images (sc-7577 Raw LoRA trainer) + encode the e2e real-weight smoke output to
# PNG (sc-7571); mirrors mlx-gen-lens / mlx-gen-z-image.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
# Backend-neutral gen-core contract conformance (capability honesty / progress monotonicity / typed
# cancellation / seed determinism / registry round-trip) — Krea runs the real engine through it on the
# macos-mlx lane, the sc-4481 standard every shipped family meets. Weight-gated (#[ignore]).
sceneworks-gen-core-testkit = { workspace = true }
