[package]
name = "mlx-gen-ltx"
version = "0.0.0"
edition = "2021"
description = "LTX-2.3 video (text-to-video) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "video", "ltx", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { package = "pmetal-mlx-rs", git = "https://github.com/michaeltrefry/mlx-rs", rev = "e59ffd88014340e6a49b26de95446b8b76a57932" }
# Link-time self-registration into mlx-gen's model registry.
inventory = "0.3"
# embedded_config.json / config.json / split_model.json reading (config-driven loader).
serde_json = "1"
# Decode training-dataset images (LoRA training, sc-3047). PNG + JPEG cover the SceneWorks dataset
# formats; the trainer center-crops + hands the Image to the VAE preprocess.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
