[package]
name = "mlx-gen-qwen-image"
version = "0.0.0"
edition = "2021"
description = "Qwen-Image (+ Qwen-Image-Edit) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "qwen-image", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry (wired when the Generator lands).
inventory = { workspace = true }
