[package]
name = "mlx-gen-qwen-image"
version = "0.0.0"
edition = "2021"
description = "Qwen-Image (+ Qwen-Image-Edit) provider crate for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "diffusion", "qwen-image", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
# Link-time self-registration into mlx-gen's model registry (wired when the Generator lands).
inventory = { workspace = true }
# Optional PiD super-resolving decoder (epic 7840, sc-7845): the Qwen-Image latent space has a PiD
# backbone, so `decode_and_collect` routes through a `mlx_gen_pid::PidDecoder` when `req.use_pid` is
# set. `mlx-gen-pid` depends only on core (no dep on this crate), so the dependency is acyclic.
mlx-gen-pid = { path = "../mlx-gen-pid" }
# Offline pre-quantization converter (sc-8670): annotate the packed tier's `config.json` with the
# `quantization` block (HF/diffusers-compat; the loader auto-detects via `{base}.scales`).
serde_json = "1"

[dev-dependencies]
# Encode the PiD-vs-VAE real-weight smoke output to PNG for eyeball comparison (sc-7845;
# `tests/pid_decode_real_weights.rs`); mirrors mlx-gen-pid / mlx-gen-krea.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
