[package]
name = "mlx-gen-sam2"
version = "0.0.0"
edition = "2021"
description = "SAM2 (Segment Anything 2) image encoder + box-prompt segmenter provider for mlx-gen."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "sam2", "segmentation", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
