[package]
name = "mlx-gen-sam3"
version = "0.0.0"
edition = "2021"
description = "SAM3 (Segment Anything 3) concept-segmentation detector for mlx-gen — native MLX PE vision encoder, text-promptable instance segmentation."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/mlx-gen"
keywords = ["mlx", "apple-silicon", "sam3", "segmentation", "inference"]
categories = ["science"]

[dependencies]
mlx-gen = { path = ".." }
# Must match the core crate's MLX binding exactly (shared `Array` type). See root Cargo.toml.
mlx-rs = { workspace = true }
